feat: implement GitHub OAuth auth server and client store
- Add OAuth handling and success template to auth-server

- Create Zustand store for profile and token management

- Implement deep link listener for authentication redirect

--- a/apps/auth-server/package.json
+++ b/apps/auth-server/package.json
@@ -5,7 +5,8 @@
         "dev": "bun run --watch src/index.ts",
         "start": "bun run src/index.ts",
         "build": "tsc --noEmit",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "db:push": "drizzle-kit push"
     },
     "dependencies": {
         "@elysiajs/cors": "^1.0.0",
