--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.29.2",
     "i18next": "^25.8.0",
     "lucide-react": "^0.563.0",
